--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-My Github Page
+<html>
+	<head>
+		<title>Pope Names</title>
+	</head>
+	<body>
+		<h3>My Github Page</h3>
+		<img src="src/img/logo.png" />
+	</body>
+</html>
